feat: Add list work reports funct with optional filtering
* Comment broken Bind method in create work report causing two response
* Augment work report struct embedding
* Geneate swagger
