# internal/handler/work_handler.go
@@ -2,8 +2,9 @@ package handler
 
 import (
 	"net/http"
+	"strconv"
 
-	_ "github.com/blox-eng/backend/internal/model"
+	"github.com/blox-eng/backend/internal/model"
 	"github.com/blox-eng/backend/pkg/httputil"
 	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/render"
@@ -15,11 +16,16 @@ import (
 // TODO: Add authentication to all routes
 // TODO: Add authorization to all routes
 
-// GetAllWorkReports godoc
+// ListWorkReports godoc
 //
-//	@Summary		Get all work reports
-//	@Description	Retrieve a list of all work reports
+//	@Summary		List work reports
+//	@Description	Retrieve a list of work reports
 //	@Produce		json
+//	@Param			worker			query	string	false	"Filter by worker name"
+//	@Param			work			query	string	false	"Filter by type of work"
+//	@Param			work_quantity	query	number	false	"Filter by work quantity"
+//	@Param			quantity_unit	query	string	false	"Filter by quantity unit"
+//	@Param			site_id			query	integer	false	"Filter by site ID"
 //	@Tags			Work Report
 //	@Router			/api/work-reports [get]
 //	@Success		200	{object}	httputil.Response{data=[]model.WorkReport}	"A list of work reports"
@@ -28,8 +34,19 @@ import (
 //	@Failure		500	{object}	httputil.HTTPErr							"Internal Server Error"
 //	@Failure		401	{object}	httputil.HTTPErr							"Unauthorized"
 //	@Failure		403	{object}	httputil.HTTPErr							"Forbidden"
-func getAllWorkReports(store Service, w http.ResponseWriter, r *http.Request) {
-	services, err := store.GetAllWorkReports()
+func listWorkReports(store Service, w http.ResponseWriter, r *http.Request) {
+	// Parse query parameters from the request
+	queryParams := r.URL.Query()
+	// Create a query object based on the parsed parameters
+	query := model.WorkReport{
+		Worker:       queryParams.Get("worker"),
+		Work:         queryParams.Get("work"),
+		WorkQuantity: parseFloatQueryParam(queryParams.Get("work_quantity")),
+		QuantityUnit: queryParams.Get("quantity_unit"),
+		SiteID:       parseUintQueryParam(queryParams.Get("site_id")),
+	}
+
+	services, err := store.ListWorkReports(&query)
 	if err != nil {
 		log.Error("Unable to fetch work report ", httputil.Error(err).Code, services, err)
 		httputil.ErrInvalidRequest(err, "Unable to Fetch Services")
@@ -47,7 +64,7 @@ func getAllWorkReports(store Service, w http.ResponseWriter, r *http.Request) {
 //	@Accept			json
 //	@Tags			Work Report
 //	@Produce		json
-//	@Param			account	body	model.CreateWorkReport	true	"Add Work Report"
+//	@Param			workReport	body	model.CreateWorkReport	true	"Add Work Report"
 //	@Router			/api/work-reports [post]
 //	@Success		201	{object}	httputil.Response{data=model.WorkReport}	"Created"
 //	@Failure		400	{object}	httputil.HTTPErr							"Bad Request"
@@ -57,9 +74,10 @@ func getAllWorkReports(store Service, w http.ResponseWriter, r *http.Request) {
 //	@Failure		403	{object}	httputil.HTTPErr							"Forbidden"
 func createWorkReport(store Service, w http.ResponseWriter, r *http.Request) {
 	data := &Request{}
-	if err := render.Bind(r, data); err != nil {
-		render.Render(w, r, httputil.ErrInvalidRequest(err, "Invalid Request"))
-	}
+	//	if err := render.Bind(r, data); err != nil {
+	//		render.Render(w, r, httputil.ErrInvalidRequest(err, "Invalid Request"))
+	//		return
+	//	}
 
 	recordSchema := data.WorkReport
 	services, err := store.CreateWorkReport(recordSchema)
@@ -159,4 +177,22 @@ func deleteWorkReport(store Service, w http.ResponseWriter, r *http.Request) {
 
 	render.Status(r, http.StatusOK)
 	render.Render(w, r, httputil.NewSuccessResponse(http.StatusOK, services))
+}
+
+// Helper function to parse float query parameters
+func parseFloatQueryParam(param string) float64 {
+	value, err := strconv.ParseFloat(param, 64)
+	if err != nil {
+		return 0.0
+	}
+	return value
+}
+
+// Helper function to parse uint query parameters
+func parseUintQueryParam(param string) uint64 {
+	value, err := strconv.ParseUint(param, 10, 64)
+	if err != nil {
+		return 0
+	}
+	return value
 }
